[package]
name = "vanity_descriptors"
version = "0.0.1"
authors = ["Justin Moon <mail@justinmoon.com>"]
edition = "2021"
description = "Create bitcoin vanity addresses from descriptors"
repository = "https://github.com/justinmoon/vanity-descriptors"
license = "MIT"
keyword = ["vanity", "address", "bitcoin"]

[[bin]]
name = "vd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
miniscript = "7.0.0"
bitcoin = "0.28.1"
num_cpus = "1.13.1"
